--- a/src/styles/draft.module.css
+++ b/src/styles/draft.module.css
@@ -1,3 +1,9 @@
 .draft-preview{
     padding: 20px;
+    overflow: hidden;
+    height: calc(100% - 78px);
+}
+.draft__container{
+    overflow-y: scroll;
+    height: 100%;
 }
