--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,12 @@ body, h1,h2,h3,h4,h5,h6,p,ul,ol,li,figure,figcaption,blockquote,dl,dd{
   width: 30px;
   height: 30px;
 }
+.icon-new-tab{
+  background: url('/imgs/new-tab.svg') no-repeat;
+  width: 20px;
+  height: 20px;
+
+}
 /* CSS for overlays */
 #overlay {
   position: fixed; /* Sit on top of the page content */
